# web_crawler_html

./: .gitignore  README.md  copilot_instructions.md  pyproject.toml
src/web_crawler/: main.py  strip_html.py
src/web_crawler/cordis_crawler/: cordis_cli.py  cordis_collector.py  cordis_research.py  cordis_search.py  project_matcher.py  raxkg_integration.py  xml_downloader.py
src/web_crawler/project_specific/: filter_keywords.py  gepris_cleaner.py  gepris_scrape.py
